// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderPage when passed 0 \`orderItems\` renders correctly with valid props 1`] = `
<OrderPage
  assemblies={
    Array [
      Object {
        "created_at": "2019-07-29T22:49:47.431Z",
        "id": 1,
        "name": "Souvlaki",
        "updated_at": "2019-07-29T22:49:47.431Z",
      },
      Object {
        "created_at": "2019-07-29T22:49:47.519Z",
        "id": 2,
        "name": "Chilli con Carne",
        "updated_at": "2019-07-29T22:49:47.519Z",
      },
    ]
  }
  csrf="3yIq75tyV791TFkzSZo/S4b+TVa/N5J3dI14PzMUPviGViEGeDSnGnvNix+MaB0RB0XuV7bpX8I3SmIEAr4/zQ=="
  departments={
    Array [
      Object {
        "created_at": "2019-07-21T16:03:32.883Z",
        "id": 3,
        "name": "Bakery",
        "updated_at": "2019-07-21T16:03:32.883Z",
      },
      Object {
        "created_at": "2019-07-21T16:03:32.883Z",
        "id": 5,
        "name": "Meat",
        "updated_at": "2019-07-21T16:03:32.883Z",
      },
    ]
  }
  items={
    Array [
      Object {
        "created_at": "2019-07-21T16:03:33.162Z",
        "department_id": 5,
        "id": 15,
        "name": "Agave Syrup",
        "updated_at": "2019-07-21T16:03:33.162Z",
      },
      Object {
        "created_at": "2019-07-21T16:03:33.162Z",
        "department_id": 3,
        "id": 13,
        "name": "Agave Syrup",
        "updated_at": "2019-07-21T16:03:33.162Z",
      },
    ]
  }
  order={
    Object {
      "created_at": "2019-08-06T22:19:49.806Z",
      "id": 2,
      "location_id": 8,
      "shopping_date": "2019-11-05T00:00:00.000Z",
      "status": "active",
      "updated_at": "2019-08-06T22:19:49.806Z",
    }
  }
  orderItems={Array []}
  orderLocationName="Durgan, Mills and Labadie"
>
  <OrderMeta
    locationName="Durgan, Mills and Labadie"
    shoppingDate="2019-11-05T00:00:00.000Z"
    status="active"
  >
    <div
      className="orderMeta"
    >
      <div>
        Shopping Date: 
        Nov 04, 2019
      </div>
      <div>
        Status: 
        active
      </div>
      <div>
        Location: 
        Durgan, Mills and Labadie
      </div>
    </div>
  </OrderMeta>
  <Sticky
    activeClass="active"
    bottomBoundary={0}
    enableTransforms={true}
    enabled={true}
    onStateChange={[Function]}
    releasedClass="released"
    shouldFreeze={[Function]}
    top={0}
  >
    <div
      className="sticky-outer-wrapper"
      style={Object {}}
    >
      <div
        className="sticky-inner-wrapper"
        style={
          Object {
            "position": "relative",
            "top": "",
            "transform": "translate3d(0,0px,0)",
            "zIndex": undefined,
          }
        }
      >
        <div
          className="stickyHeader"
        >
          <Progress
            currentCount={0}
            totalCount={0}
          >
            <div
              className="progress"
            >
              <div
                className="progress-caption"
              >
                0
              </div>
              <div
                className="progress-bar"
              >
                <div
                  className="progress-bar-fill mix-progress-bar-fill_isComplete"
                  style={
                    Object {
                      "width": "NaN%",
                    }
                  }
                >
                   
                </div>
              </div>
              <div
                className="progress-caption"
              >
                0
              </div>
            </div>
          </Progress>
          <FilterBar
            initialSelection="Item"
            items={
              Array [
                Object {
                  "text": "Item",
                  "url": "",
                },
                Object {
                  "text": "Department",
                  "url": "",
                },
                Object {
                  "text": "Meal",
                  "url": "",
                },
              ]
            }
            onChangeFilterHandler={[Function]}
          >
            <ul
              className="filterBar"
            >
              <FilterBarItem
                isActive={true}
                key="filterBar-item-0"
                onChangeFilterHandler={[Function]}
                text="Item"
                url=""
              >
                <li>
                  <a
                    className="filterBar-link mix-filterBar-link_isActive"
                    href=""
                    onClick={[Function]}
                  >
                    Item
                  </a>
                </li>
              </FilterBarItem>
              <FilterBarItem
                isActive={false}
                key="filterBar-item-1"
                onChangeFilterHandler={[Function]}
                text="Department"
                url=""
              >
                <li>
                  <a
                    className="filterBar-link"
                    href=""
                    onClick={[Function]}
                  >
                    Department
                  </a>
                </li>
              </FilterBarItem>
              <FilterBarItem
                isActive={false}
                key="filterBar-item-2"
                onChangeFilterHandler={[Function]}
                text="Meal"
                url=""
              >
                <li>
                  <a
                    className="filterBar-link"
                    href=""
                    onClick={[Function]}
                  >
                    Meal
                  </a>
                </li>
              </FilterBarItem>
            </ul>
          </FilterBar>
        </div>
      </div>
    </div>
  </Sticky>
  <div
    className="js-orderItem"
  >
    <OrderConcernGroup
      assemblies={
        Array [
          Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        ]
      }
      assemblyMap={
        Object {
          "1": Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          "2": Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        }
      }
      concern="MEAL"
      csrf="3yIq75tyV791TFkzSZo/S4b+TVa/N5J3dI14PzMUPviGViEGeDSnGnvNix+MaB0RB0XuV7bpX8I3SmIEAr4/zQ=="
      departmentMap={
        Object {
          "3": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          "5": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        }
      }
      departments={
        Array [
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        ]
      }
      itemMap={
        Object {
          "13": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 3,
            "id": 13,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
          "15": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 5,
            "id": 15,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
        }
      }
      onClickIsPickedHandler={[Function]}
      onClickRemoveItemHandler={[Function]}
      orderItems={Array []}
    />
  </div>
</OrderPage>
`;

exports[`OrderPage when passed more than 0 \`orderItems\` renders correctly with valid props 1`] = `
<Fragment>
  <OrderMeta
    locationName="Durgan, Mills and Labadie"
    shoppingDate="2019-11-05T00:00:00.000Z"
    status="active"
  />
  <Sticky
    activeClass="active"
    bottomBoundary={0}
    enableTransforms={true}
    enabled={true}
    onStateChange={[Function]}
    releasedClass="released"
    shouldFreeze={[Function]}
    top={0}
  >
    <div
      className="stickyHeader"
    >
      <Progress
        currentCount={0}
        totalCount={2}
      />
      <FilterBar
        initialSelection="Item"
        items={
          Array [
            Object {
              "text": "Item",
              "url": "",
            },
            Object {
              "text": "Department",
              "url": "",
            },
            Object {
              "text": "Meal",
              "url": "",
            },
          ]
        }
        onChangeFilterHandler={[Function]}
      />
    </div>
  </Sticky>
  <div
    className="js-orderItem"
  >
    <OrderItemList
      assemblies={
        Array [
          Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        ]
      }
      assemblyMap={
        Object {
          "1": Object {
            "created_at": "2019-07-29T22:49:47.431Z",
            "id": 1,
            "name": "Souvlaki",
            "updated_at": "2019-07-29T22:49:47.431Z",
          },
          "2": Object {
            "created_at": "2019-07-29T22:49:47.519Z",
            "id": 2,
            "name": "Chilli con Carne",
            "updated_at": "2019-07-29T22:49:47.519Z",
          },
        }
      }
      concern="ITEM"
      csrf="3yIq75tyV791TFkzSZo/S4b+TVa/N5J3dI14PzMUPviGViEGeDSnGnvNix+MaB0RB0XuV7bpX8I3SmIEAr4/zQ=="
      departmentMap={
        Object {
          "3": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          "5": Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        }
      }
      departments={
        Array [
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 3,
            "name": "Bakery",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
          Object {
            "created_at": "2019-07-21T16:03:32.883Z",
            "id": 5,
            "name": "Meat",
            "updated_at": "2019-07-21T16:03:32.883Z",
          },
        ]
      }
      itemMap={
        Object {
          "13": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 3,
            "id": 13,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
          "15": Object {
            "created_at": "2019-07-21T16:03:33.162Z",
            "department_id": 5,
            "id": 15,
            "name": "Agave Syrup",
            "updated_at": "2019-07-21T16:03:33.162Z",
          },
        }
      }
      onClickIsPickedHandler={[Function]}
      onClickRemoveItemHandler={[Function]}
      orderItems={
        Array [
          Object {
            "assembly_id": 1,
            "created_at": "2019-07-29T22:50:37.840Z",
            "department_id": 3,
            "id": 22,
            "item_id": 15,
            "order_id": 11,
            "picked": false,
            "qty": 3,
            "updated_at": "2019-07-29T22:50:37.840Z",
          },
          Object {
            "assembly_id": null,
            "created_at": "2019-07-29T22:50:37.887Z",
            "department_id": 5,
            "id": 23,
            "item_id": 13,
            "order_id": 11,
            "picked": false,
            "qty": 1,
            "updated_at": "2019-07-29T22:50:37.887Z",
          },
        ]
      }
    />
  </div>
</Fragment>
`;
